--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,23 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.1",
+    "@emotion/memoize": "^0.9.0",
+    "@emotion/unitless": "^0.10.0",
+    "@tanstack/query-core": "^5.81.5",
     "@tanstack/react-query": "^5.81.2",
     "axios": "^1.10.0",
+    "cookie": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.6.3",
     "react-router-dom": "^7.6.2",
-    "styled-components": "^6.1.19"
+    "scheduler": "^0.26.0",
+    "set-cookie-parser": "^2.7.1",
+    "shallowequal": "^1.1.0",
+    "styled-components": "^6.1.19",
+    "stylis": "^4.3.6",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^7.6.0",
