--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,12 +3,12 @@ nixPkgs = ["nodejs-20_x", "npm"]
 
 [phases.install]
 cmds = [
-    "npm ci --include=dev",
-    "npx prisma generate"
+    "npm ci --include=dev"
 ]
 
 [phases.build]
 cmds = [
+    "npx prisma generate",
     "npm run build",
     "cd frontend && npm ci && npm run build && cd .."
 ]
