--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["nodejs-20_x", "npm"]
+nixPkgs = ["nodejs-20_x", "npm-10_x"]
 
 [phases.install]
 cmds = [
@@ -20,4 +20,5 @@ cmd = "npm run railway:start"
 NODE_ENV = "production"
 NIXPACKS_NODE_VERSION = "20"
 NIXPACKS_NO_MUSL = "1"
-NIXPACKS_PKGS = "nodejs-20_x npm"
+NIXPACKS_PKGS = "nodejs-20_x npm-10_x"
+NIXPACKS_DISABLE_CACHE = "1"
