docs: Document production deployment URLs and configuration
- Added production URLs to README.md (berse.app and api.berse.app)
- Created DEPLOYMENT.md with comprehensive deployment documentation
- Updated GitHub Actions workflow comments to reflect correct Netlify domain
- Clarified that main branch auto-deploys to production
- Both deployments verified and working

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
   
   # Deploy job removed - Using Railway and Netlify auto-deployment instead
   # Railway backend: Automatically deploys from main branch to api.berse.app
-  # Netlify frontend: Automatically deploys from main branch to bersemuka.netlify.app
+  # Netlify frontend: Automatically deploys from main branch to berse.app (primary domain)
   # 
   # The SSH deployment steps are not needed since:
   # 1. Railway handles backend deployment automatically
