Fix critical auth issues: token mismatch and add session validation
- Fixed token storage key mismatch (bersemuka_token vs auth_token)
- Added token validation on app startup to prevent unauthorized access
- Prevents new users from being logged in with stale sessions
- Fixes Syed Ali's profile save and event sync issues

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite --port 5173 --host",
+    "dev:check": "node -e \"const fs=require('fs'); const env=fs.readFileSync('.env','utf8'); const hasApiUrl=env.match(/^[^#]*VITE_API_URL=http/m); if(hasApiUrl) {console.error('❌ ERROR: VITE_API_URL should be commented out for local dev!'); process.exit(1);} else console.log('✅ Config OK');\" && npm run dev",
     "build": "cross-env NODE_ENV=production vite build",
     "build:check": "cross-env NODE_ENV=production tsc && vite build",
     "preview": "cross-env NODE_ENV=production vite preview --port 5173",
