--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm install && npm run build"
+  command = "npm install --production=false && npm run build"
 
 [build.environment]
   NODE_ENV = "production"
