--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/html2canvas": "^0.5.35",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/react-router-dom": "^5.3.3",
