--- a/package.json
+++ b/package.json
@@ -74,8 +74,11 @@
     "prisma": "^6.13.0",
     "qrcode": "^1.5.4",
     "redis": "^5.7.0",
+    "redoc-express": "^2.1.0",
     "socket.io": "^4.7.4",
     "speakeasy": "^2.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^4.19.3",
     "web-push": "^3.6.7",
     "winston": "^3.17.0",
@@ -98,6 +101,8 @@
     "@types/socket.io": "^3.0.2",
     "@types/speakeasy": "^2.0.7",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/web-push": "^3.6.4",
     "copyfiles": "^2.4.1",
     "jest": "^30.0.5",
