--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/redis": "^4.0.10",
     "@types/winston": "^2.4.4",
+    "@yusifaliyevpro/countries": "^2.2.2",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
