--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,12 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    // Old unused files moved to backup
+    "src/_old_unused/**/*",
+    // Jobs temporarily disabled
+    "src/jobs/**/*"
+  ]
 }
