--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "country-state-city": "^3.2.1",
     "cross-env": "^10.0.0",
     "csurf": "^1.11.0",
     "dotenv": "^16.5.0",
