feat(auth): implement email verification process and related endpoints
- Added functionality to send verification emails upon user registration.
- Created new endpoints for sending and verifying email addresses.
- Implemented logic to check if email verification is required during login.
- Enhanced email templates for verification and password change notifications.
- Updated email service to handle password change confirmation emails.
- Improved email design for better user experience.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "db:restore": "node scripts/restore-db.js",
     "migrate:make": "knex migrate:make",
     "migrate:latest": "knex migrate:latest",
-    "migrate:rollback": "knex migrate:rollback"
+    "migrate:rollback": "knex migrate:rollback",
+    "test:email": "ts-node scripts/test-email.ts",
+    "setup:email-logo": "bash scripts/setup-email-logo.sh"
   },
   "keywords": [],
   "author": "",
