--- a/.env.example
+++ b/.env.example
@@ -32,9 +32,14 @@ UPLOAD_DIR="uploads"
 # Email Configuration (for notifications)
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
+SMTP_SECURE="false"
 SMTP_USER="your-email@gmail.com"
-SMTP_PASS="your-app-password"
+SMTP_PASS="your-16-character-app-password"
 FROM_EMAIL="noreply@bersemuka.com"
+FROM_NAME="Berse"
+SUPPORT_EMAIL="support@bersemuka.com"
+APP_URL="http://localhost:3000"
+LOGO_URL="http://localhost:3000/assets/logos/berse-email-logo.png"
 
 # External API Keys
 GOOGLE_MAPS_API_KEY="your-google-maps-api-key"
