refactor(db): convert Prisma model names to snake_case and remove @@map directives
- Updated all model names from PascalCase to snake_case for PostgreSQL compatibility
- Removed @@map directives as they are no longer needed
- Updated all relation references to match new model names
- Added Railway deployment configurations and setup script

BREAKING CHANGE: Model names changed from PascalCase to snake_case, requiring updates to all database queries and relations in application code

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,34 @@
+# =============================================================================
+# ENVIRONMENT CONFIGURATION EXAMPLE
+# =============================================================================
+# Copy this file to .env.local for development
+# Never commit .env or .env.local to git!
+# For Railway: Set these in Railway dashboard under Variables
+# =============================================================================
+
+# -----------------------------------------------------------------------------
 # Database Configuration
-DATABASE_URL="postgresql://username:password@localhost:5432/bersemuka_dev"
+# -----------------------------------------------------------------------------
+# Development: Get this from Railway dev database
+# Production/Staging: Railway auto-fills from linked PostgreSQL
+DATABASE_URL="postgresql://postgres:password@containers-us-west-xxx.railway.app:7432/railway"
 DATABASE_MAX_CONNECTIONS=20
 
+# -----------------------------------------------------------------------------
 # JWT Configuration
-JWT_SECRET="your-super-secret-jwt-key-here-min-256-bits"
-JWT_REFRESH_SECRET="your-super-secret-refresh-jwt-key-here-min-256-bits"
+# -----------------------------------------------------------------------------
+# IMPORTANT: Use different secrets for dev/staging/production!
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET="your-super-secret-jwt-key-here-min-64-chars"
+JWT_REFRESH_SECRET="your-super-secret-refresh-jwt-key-here-min-64-chars"
 JWT_EXPIRES_IN="15m"
 JWT_REFRESH_EXPIRES_IN="7d"
 
+# -----------------------------------------------------------------------------
 # Server Configuration
-PORT=3001
+# -----------------------------------------------------------------------------
 NODE_ENV="development"
+PORT=3001
 API_URL="http://localhost:3001"
 
 # CORS Configuration
@@ -30,16 +48,20 @@ MAX_FILE_SIZE="10mb"
 UPLOAD_DIR="uploads"
 
 # Email Configuration (for notifications)
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT=587
-SMTP_SECURE="false"
-SMTP_USER="your-email@gmail.com"
-SMTP_PASS="your-16-character-app-password"
-FROM_EMAIL="noreply@bersemuka.com"
-FROM_NAME="Berse"
-SUPPORT_EMAIL="support@bersemuka.com"
-APP_URL="http://localhost:3000"
-LOGO_URL="http://localhost:3000/assets/logos/berse-email-logo.png"
+# -----------------------------------------------------------------------------
+# Email Configuration
+# -----------------------------------------------------------------------------
+# Development: Use Mailtrap, MailHog, or similar test email service
+# Production: Use Gmail, SendGrid, AWS SES, etc.
+SMTP_HOST="smtp.mailtrap.io"
+SMTP_PORT=2525
+SMTP_USER="your-mailtrap-username"
+SMTP_PASS="your-mailtrap-password"
+FROM_EMAIL="noreply@berse.app"
+
+# Frontend URL for emails
+FRONTEND_URL="http://localhost:5173"
+APP_URL="http://localhost:5173"
 
 # External API Keys
 GOOGLE_MAPS_API_KEY="your-google-maps-api-key"
