--- a/.env.staging.example
+++ b/.env.staging.example
@@ -13,7 +13,7 @@ JWT_REFRESH_EXPIRES_IN="7d"
 
 # Server Configuration
 PORT=3001
-NODE_ENV="production"
+NODE_ENV="staging"
 API_URL="https://api-staging.bersemuka.com"
 
 # CORS Configuration
