--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "node dist/server.js",
     "start:prod": "cross-env NODE_ENV=production node dist/server.js",
     "railway:build": "npm run build && cd frontend && npm install && npm run build",
-    "railway:start": "npx prisma generate && npm run start:prod",
-    "railway:start:migrate": "npm run prisma:migrate:prod && npm run start:prod",
+    "railway:start": "npx prisma generate && npx prisma migrate deploy && npm run start:prod",
+    "railway:seed": "ts-node prisma/seed.ts && ts-node prisma/seed-app-config.ts",
     "start:cluster": "cross-env NODE_ENV=production CLUSTER_MODE=true node dist/server.js",
     "copy-files": "copyfiles -u 1 src/**/*.json dist/",
     "prisma:generate": "prisma generate",
