feat(dev): add Railway staging database connection support
Add comprehensive local development setup with dual database mode support:

- Add extensive documentation (LOCAL_DEV_STAGING_SETUP.md) covering Railway
  staging database connection via public TCP proxy
- Implement staging database detection and safety warnings in database config
- Create separate dev scripts: 'npm run dev' for Railway staging,
  'npm run dev:local' for local PostgreSQL
- Add dotenv-cli dependency for environment-specific configuration
- Include .env.railway in gitignore for Railway-specific credentials

This enables developers to choose between isolated local development and
staging database testing while providing clear warnings about data safety
when connected to shared staging environment.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/server.ts",
+    "dev": "dotenv -e .env.development.local -- nodemon --exec ts-node src/server.ts",
+    "dev:local": "nodemon --exec ts-node src/server.ts",
     "build": "rimraf dist && tsc && npm run copy-files",
     "build:backend": "rimraf dist && tsc && npm run copy-files",
     "build:check": "tsc --noEmit",
@@ -105,6 +106,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "@types/web-push": "^3.6.4",
     "copyfiles": "^2.4.1",
+    "dotenv-cli": "^10.0.0",
     "jest": "^30.0.5",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
