feat(modules): add payment gateways and card game feedback
Introduces two major feature modules:

Payment Gateway Abstraction Layer:
- Provider-agnostic architecture supporting Xendit, Stripe, and future providers
- Abstract base class defining 22 standard payment operations
- Factory pattern for dynamic provider selection and routing
- Complete documentation and database seeding scripts
- Supports payment intents, captures, refunds, payouts, and webhooks

Card Game Feedback System:
- Feedback collection with 1-5 star ratings and comments
- Upvote/downvote system for helpful feedback
- Reply/discussion threads for community engagement
- Comprehensive statistics and analytics endpoints
- Full CRUD with filtering, sorting, and pagination

Also updates package.json seed scripts and v2 API route documentation.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "railway:build": "npm run build && cd frontend && npm install && npm run build",
     "railway:start": "npx prisma generate && npx prisma migrate deploy && npm run start:prod",
     "railway:start:migrate": "npm run prisma:migrate:prod && npm run start:prod",
-    "railway:seed": "ts-node prisma/seed.ts && ts-node prisma/seed-app-config.ts",
+    "railway:seed": "ts-node prisma/seed.ts && ts-node prisma/seed-payment-providers.ts && ts-node prisma/seed-app-config.ts",
     "start:cluster": "cross-env NODE_ENV=production CLUSTER_MODE=true node dist/server.js",
     "copy-files": "copyfiles -u 1 src/**/*.json dist/",
     "prisma:generate": "prisma generate",
@@ -21,6 +21,8 @@
     "prisma:migrate:prod": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "prisma:seed": "ts-node prisma/seed.ts",
+    "prisma:seed:payments": "ts-node prisma/seed-payment-providers.ts",
+    "prisma:seed:all": "npm run prisma:seed && npm run prisma:seed:payments && ts-node prisma/seed-app-config.ts",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,css,md}\"",
