--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "railway:build": "npm run build && cd frontend && npm install && npm run build",
     "railway:start": "npx prisma generate && npx prisma migrate deploy && npm run start:prod",
     "railway:start:migrate": "npm run prisma:migrate:prod && npm run start:prod",
-    "railway:seed": "ts-node prisma/seed.ts && ts-node prisma/seed-payment-providers.ts && ts-node prisma/seed-app-config.ts",
+    "railway:seed": "ts-node prisma/seeds/index.ts",
     "start:cluster": "cross-env NODE_ENV=production CLUSTER_MODE=true node dist/server.js",
     "copy-files": "copyfiles -u 1 src/**/*.json dist/",
     "prisma:generate": "prisma generate",
@@ -21,8 +21,16 @@
     "prisma:migrate:prod": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "prisma:seed": "ts-node prisma/seed.ts",
-    "prisma:seed:payments": "ts-node prisma/seed-payment-providers.ts",
-    "prisma:seed:all": "npm run prisma:seed && npm run prisma:seed:payments && ts-node prisma/seed-app-config.ts",
+    "prisma:seed:all": "ts-node prisma/seeds/index.ts",
+    "prisma:seed:core": "ts-node prisma/seed.ts",
+    "prisma:seed:badges": "ts-node prisma/seeds/core/badges.seed.ts",
+    "prisma:seed:rewards": "ts-node prisma/seeds/core/rewards.seed.ts",
+    "prisma:seed:users": "ts-node prisma/seeds/core/users.seed.ts",
+    "prisma:seed:communities": "ts-node prisma/seeds/core/communities.seed.ts",
+    "prisma:seed:events": "ts-node prisma/seeds/core/events.seed.ts",
+    "prisma:seed:config": "ts-node prisma/seeds/config/seed-app-config.ts && ts-node prisma/seeds/config/seed-payment-providers.ts",
+    "prisma:seed:onboarding": "ts-node prisma/seeds/features/onboarding-v2.seed.ts",
+    "seed": "ts-node prisma/seeds/index.ts",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,css,md}\"",
@@ -117,5 +125,8 @@
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seeds/index.ts"
   }
 }
