--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,15 @@ COOKIE_SECRET="your-cookie-secret-key-here"
 MAX_FILE_SIZE="10mb"
 UPLOAD_DIR="uploads"
 
+# Digital Ocean Spaces Configuration
+# For local development, you can use the staging space or leave empty to use local uploads
+SPACES_ENDPOINT="https://sgp1.digitaloceanspaces.com"
+SPACES_BUCKET="staging-berse-app"
+SPACES_REGION="sgp1"
+SPACES_ACCESS_KEY_ID="your-spaces-access-key"
+SPACES_SECRET_ACCESS_KEY="your-spaces-secret-key"
+SPACES_CDN_ENDPOINT="https://staging-berse-app.sgp1.cdn.digitaloceanspaces.com"
+
 # Email Configuration (for notifications)
 # -----------------------------------------------------------------------------
 # Email Configuration
