--- a/.env.production.example
+++ b/.env.production.example
@@ -32,6 +32,14 @@ COOKIE_SECRET="PRODUCTION_COOKIE_SECRET_CHANGE_THIS"
 MAX_FILE_SIZE="5mb"
 UPLOAD_DIR="/app/uploads"
 
+# Digital Ocean Spaces Configuration (Production)
+SPACES_ENDPOINT="https://sgp1.digitaloceanspaces.com"
+SPACES_BUCKET="production-berse-app"
+SPACES_REGION="sgp1"
+SPACES_ACCESS_KEY_ID="PRODUCTION_SPACES_ACCESS_KEY"
+SPACES_SECRET_ACCESS_KEY="PRODUCTION_SPACES_SECRET_KEY"
+SPACES_CDN_ENDPOINT="https://production-berse-app.sgp1.cdn.digitaloceanspaces.com"
+
 # Email Configuration
 SMTP_HOST="smtp.sendgrid.net"
 SMTP_PORT=587
