--- a/.env.staging.example
+++ b/.env.staging.example
@@ -32,6 +32,14 @@ COOKIE_SECRET="STAGING_COOKIE_SECRET"
 MAX_FILE_SIZE="10mb"
 UPLOAD_DIR="/app/uploads"
 
+# Digital Ocean Spaces Configuration (Staging)
+SPACES_ENDPOINT="https://sgp1.digitaloceanspaces.com"
+SPACES_BUCKET="staging-berse-app"
+SPACES_REGION="sgp1"
+SPACES_ACCESS_KEY_ID="DO801PF4X289JW2EAXN8"
+SPACES_SECRET_ACCESS_KEY="85TJf0Zb0quzVw++E+lrRLvSPazE4gbiU/LTV6RTy9g"
+SPACES_CDN_ENDPOINT="https://staging-berse-app.sgp1.cdn.digitaloceanspaces.com"
+
 # Email Configuration (Use test email service)
 SMTP_HOST="smtp.mailtrap.io"
 SMTP_PORT=2525
