--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.913.0",
+    "@aws-sdk/s3-request-presigner": "^3.913.0",
     "@prisma/client": "^6.13.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
@@ -87,6 +89,7 @@
     "qrcode": "^1.5.4",
     "redis": "^5.7.0",
     "redoc-express": "^2.1.0",
+    "sharp": "^0.34.4",
     "socket.io": "^4.7.4",
     "speakeasy": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
