feat(referrals): track referral signups, award points and add referral notifications
- create referral record on signup and upsert referralStat (stores device/utm metadata, IP/userAgent)
- award referral points to referrer and mark rewards flags
- notify referrer via new notifyReferralUsed template
- log referral events
- resolve referrer profile picture to public URL when returning referral validation response
- add new NotificationType values (SOCIAL, CONNECTION, ACHIEVEMENT, REMINDER, COMMUNITY, TRAVEL) in prisma schema and update controller enums
- update docs: add validate-referral endpoint to AUTH_API and expand NOTIFICATIONS_API; bump notifications docs version
- update .env.example database comments and example connection string

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,13 @@
 # -----------------------------------------------------------------------------
 # Database Configuration
 # -----------------------------------------------------------------------------
-# Development: Get this from Railway dev database
-# Production/Staging: Railway auto-fills from linked PostgreSQL
-DATABASE_URL="postgresql://postgres:password@containers-us-west-xxx.railway.app:7432/railway"
+# Development: Use Railway staging database for consistency with deployed environment
+# Production/Staging: Railway auto-fills from linked PostgreSQL service
+# Get connection string from Railway dashboard → Your Project → PostgreSQL → Connect
+DATABASE_URL="postgresql://postgres:password@crossover.proxy.rlwy.net:27596/railway?connect_timeout=30&pool_timeout=30"
 DATABASE_MAX_CONNECTIONS=20
+
+# Note: If you need local PostgreSQL, use: postgresql://username@localhost:5432/database_name
 
 # -----------------------------------------------------------------------------
 # JWT Configuration
