feat(payments): add Xendit integration, seed, and env vars
- Add xendit-node dependency
- Implement XenditGateway using Xendit SDK:
  - create/confirm/capture/cancel payments
  - refund (simplified/pending flow), payouts (placeholder)
  - customer creation, payment method placeholders, listing/removal stubs
  - webhook verification (callback token) and parsing
  - health check and status mapping
  - improved logging and error propagation
- Add Prisma seed for Xendit payment provider (idempotent upsert, preserves existing config)
- Add XENDIT_* env vars to .env.example

--- a/.env.example
+++ b/.env.example
@@ -121,6 +121,15 @@ VAPID_EMAIL="mailto:admin@bersemuka.com"
 WEBHOOK_SECRET="your-webhook-secret"
 PAYMENT_WEBHOOK_URL="/api/webhooks/payment"
 
+# -----------------------------------------------------------------------------
+# Payment Gateway Configuration
+# -----------------------------------------------------------------------------
+# Xendit Configuration
+XENDIT_SECRET_KEY="xnd_development_your_secret_key"
+XENDIT_PUBLIC_KEY="xnd_public_development_your_public_key"
+XENDIT_WEBHOOK_TOKEN="your_webhook_verification_token"
+XENDIT_ENVIRONMENT="test"
+
 # Development/Testing
 TEST_DATABASE_URL="postgresql://username:password@localhost:5432/bersemuka_test"
 ENABLE_DEBUG_LOGS=true
