--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "web-push": "^3.6.7",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
+    "xendit-node": "^7.0.0",
     "zod": "^4.0.14"
   },
   "devDependencies": {
