feat(qr,events,communities,docs): add JWT QR identity system, previews, fallbacks, routes, and docs
- Add full QR Code Identity feature:
  - New QR services, types, validators and controller (generate, validate, image)
  - JWT-signed QR tokens with one-time nonces (Redis) and purpose-based expiries (CONNECT 15m, CHECKIN 5m)
  - PNG QR generation with optional logo overlay and response headers
  - Invalidate/nonces handling and user-level invalidation
- Integrate QR flows into API:
  - User routes: POST /v2/users/me/qr-code, /me/qr-code/image, /qr-code/validate
  - Connections: POST /v2/connections/scan-qr — scan to send connection request (handles connected/pending/blocked)
  - Events: POST /v2/events/scan-qr — organizer-only check-in via CHECKIN QR
  - Add scan validators and wiring into existing controllers/routes
  - Add ConnectionService.getConnectionStatus helper to determine connection/blocked/pending state
- Events & Communities enhancements:
  - Events: include attendeesPreview, rsvpsPreview, stats, isOwner; fallback behavior when filters return no results with isFallback flag and changed message
  - Communities: include membersPreview, upcomingEventsPreview, userStatus; fallback behavior when filters return no results with isFallback flag and changed message
  - Update controllers, services and types to return previews and user-specific fields
  - Update responses/messages when fallback is applied
- Docs & README:
  - Add QR_CODE_API.md full documentation and wire into docs/README
  - Update EVENTS_API.md to document fallback behavior and detailed event response fields
  - Add Swagger annotations for new QR and scan endpoints
- Misc:
  - Add uuid and @types/uuid to package.json (and package-lock)
  - Tidy up trustLevel defaults and small formatting fixes

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/csurf": "^1.11.5",
     "@types/node-cron": "^3.0.11",
     "@types/redis": "^4.0.10",
+    "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "@yusifaliyevpro/countries": "^2.2.2",
     "axios": "^1.11.0",
@@ -95,6 +96,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^4.19.3",
+    "uuid": "^13.0.0",
     "web-push": "^3.6.7",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
