feat(payments,webhooks): centralize & harden webhook handling; normalize events; update validators & docs
- Centralize public webhook route at v2 router (payments/webhooks/:provider) with provider validation and early placement
- Normalize incoming webhook payload in PaymentController: extract signature headers (x-callback-token / stripe-signature), populate eventType/eventId/timestamp/data
- Improve Xendit gateway webhook logging and diagnostics (truncated token debug, configured secret, length info on invalid signature)
- Make confirm flow resilient for mobile WebView: PaymentService returns current status when no gatewayTransactionId and uses provided gateway id when present; fallback provider selection for fee calc
- Update validators: allow 'event' and 'donation' reference types, make gatewayTransactionId optional, validate provider via route param for webhooks
- Remove duplicate webhook route/docs from payment.routes and expand Swagger docs for confirm and transaction endpoints
- Minor tsconfig cleanup: restore excluded old vouch service path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,8 @@
     // Old unused files moved to backup
     "src/_old_unused/**/*",
     // Jobs temporarily disabled
-    "src/jobs/**/*"
+    "src/jobs/**/*",
+    // Old vouch service with compilation errors
+    "src/modules/connections/vouching/vouch.service-old.ts"
   ]
 }
