feat(app-constants,user,routes,docs,scripts): add App Constants API, mutual connections endpoint, and docs
- Add new App Constants module (types, service, controller, routes) exposing enums, validation rules and app config:
  - Endpoints: GET /v2/app-constants/enums, /validation-rules, /config, /all
  - Centralized enums and config for mobile/web clients
- Add API docs for App Constants (docs/api-v2/APP_CONSTANTS_API.md)
- Register app-constants routes in v2 router and update public docs/health payload
- Enhance UserController.getUserById to include connection/trust metrics, memberSince and events summary
- Add new endpoint GET /v2/users/:userId/mutual-connections with pagination and transformed user responses; add route and controller method
- Add npm script "fix:image-keys" to package.json

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "migrate:latest": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback",
     "test:email": "ts-node scripts/test-email.ts",
-    "setup:email-logo": "bash scripts/setup-email-logo.sh"
+    "setup:email-logo": "bash scripts/setup-email-logo.sh",
+    "fix:image-keys": "ts-node scripts/fix-encoded-image-keys.ts"
   },
   "keywords": [],
   "author": "",
