--- a/.env.example
+++ b/.env.example
@@ -124,10 +124,21 @@ PAYMENT_WEBHOOK_URL="/api/webhooks/payment"
 # -----------------------------------------------------------------------------
 # Payment Gateway Configuration
 # -----------------------------------------------------------------------------
-# Xendit Configuration
+# Xendit Configuration (Southeast Asia)
+# Get credentials from: https://dashboard.xendit.co/settings/developers#api-keys
 XENDIT_SECRET_KEY="xnd_development_your_secret_key"
 XENDIT_PUBLIC_KEY="xnd_public_development_your_public_key"
 XENDIT_WEBHOOK_TOKEN="your_webhook_verification_token"
+
+# Stripe Configuration (Global)
+# Get credentials from: https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
+STRIPE_PUBLISHABLE_KEY="pk_test_your_stripe_publishable_key"
+STRIPE_WEBHOOK_SECRET="whsec_your_webhook_signing_secret"
+
+# Payment Gateway URLs
+XENDIT_WEBHOOK_URL="/api/webhooks/payment/xendit"
+STRIPE_WEBHOOK_URL="/api/webhooks/payment/stripe"
 XENDIT_ENVIRONMENT="test"
 
 # Development/Testing
