feat(scripts,onboarding,metadata): add DB wait/health scripts, require CUID for screenId, and tidy profile metadata docs
- Add scripts/wait-for-db.js: Prisma-based DB wait loop with retries, query test and graceful shutdown (used to gate startup)
- Add scripts/health-check.js: simple Railway environment & DATABASE_URL diagnostics
- Update package.json railway commands to run wait-for-db before migrations/start and include it in railway:debug
- Onboarding validators: replace .isUUID() with .isString() + .isLength(20,30) and update messages to require valid CUID for screenId across relevant validators
- Profile metadata Swagger docs: remove emojis/markdown-style formatting and reflow username validation description for clearer, plain-text docs

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "start": "node dist/server.js",
     "start:prod": "cross-env NODE_ENV=production node dist/server.js",
     "railway:build": "npm run build && cd frontend && npm install && npm run build",
-    "railway:start": "npx prisma generate && npx prisma migrate deploy && npm run start:prod",
+    "railway:start": "node scripts/wait-for-db.js && npx prisma generate && npx prisma migrate deploy && npm run start:prod",
     "railway:start:migrate": "npm run prisma:migrate:prod && npm run start:prod",
+    "railway:debug": "echo 'Railway Environment Debug:' && env | grep -E '(DATABASE|NODE_ENV|PORT|RAILWAY)' && node scripts/wait-for-db.js",
     "railway:seed": "ts-node prisma/seeds/index.ts",
     "start:cluster": "cross-env NODE_ENV=production CLUSTER_MODE=true node dist/server.js",
     "copy-files": "copyfiles -u 1 src/**/*.json dist/",
