feat(communities,config,swagger,scripts,types,controllers,routes,services,package.json): add community QR code generation, public preview and deep linking
- add APP_URL, IOS_APP_STORE_URL and ANDROID_PLAY_STORE_URL env vars to .env examples
- implement /v2/communities/:communityId/qr-code (private) and /v2/communities/preview/:communityId (public)
- generate QR as base64 PNG via qrcode lib and return previewUrl + web deep link
- add swagger schemas (CommunityQRCodeResponse, PublicCommunityPreview) and route docs
- add service/controller logic, types for QR/preview, and public preview event/download links
- add test script (scripts/test-community-qr.ts) and npm script "test:qr"

--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,19 @@ FROM_EMAIL="noreply@berse.app"
 FRONTEND_URL="http://localhost:5173"
 APP_URL="http://localhost:5173"
 
+# -----------------------------------------------------------------------------
+# QR Code & Deep Linking Configuration
+# -----------------------------------------------------------------------------
+# Base URL for QR code preview pages and deep linking
+# Development: Use localhost with port
+# Production: Use your production domain
+# APP_URL is used for generating QR code preview links
+# If APP_URL is not set, FRONTEND_URL will be used as fallback
+
+# App Store URLs for QR code download links
+IOS_APP_STORE_URL="https://apps.apple.com/app/berse"
+ANDROID_PLAY_STORE_URL="https://play.google.com/store/apps/details?id=com.berse.app"
+
 # External API Keys
 GOOGLE_MAPS_API_KEY="your-google-maps-api-key"
 CLOUDINARY_CLOUD_NAME="your-cloudinary-cloud-name"
