--- a/.env.production.example
+++ b/.env.production.example
@@ -47,6 +47,14 @@ SMTP_USER="apikey"
 SMTP_PASS="SENDGRID_API_KEY"
 FROM_EMAIL="noreply@bersemuka.com"
 
+# Frontend URL Configuration
+FRONTEND_URL="https://app.bersemuka.com"
+APP_URL="https://app.bersemuka.com"
+
+# QR Code & Deep Linking Configuration
+IOS_APP_STORE_URL="https://apps.apple.com/app/berse"
+ANDROID_PLAY_STORE_URL="https://play.google.com/store/apps/details?id=com.berse.app"
+
 # External API Keys
 GOOGLE_MAPS_API_KEY="PRODUCTION_GOOGLE_MAPS_API_KEY"
 CLOUDINARY_CLOUD_NAME="PRODUCTION_CLOUDINARY_CLOUD"
