--- a/.env.staging.example
+++ b/.env.staging.example
@@ -47,6 +47,14 @@ SMTP_USER="MAILTRAP_USER"
 SMTP_PASS="MAILTRAP_PASSWORD"
 FROM_EMAIL="staging@bersemuka.com"
 
+# Frontend URL Configuration
+FRONTEND_URL="https://app-staging.bersemuka.com"
+APP_URL="https://app-staging.bersemuka.com"
+
+# QR Code & Deep Linking Configuration
+IOS_APP_STORE_URL="https://apps.apple.com/app/berse"
+ANDROID_PLAY_STORE_URL="https://play.google.com/store/apps/details?id=com.berse.app"
+
 # External API Keys (Use test/sandbox keys)
 GOOGLE_MAPS_API_KEY="STAGING_GOOGLE_MAPS_API_KEY"
 CLOUDINARY_CLOUD_NAME="STAGING_CLOUDINARY_CLOUD"
