--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "migrate:latest": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback",
     "test:email": "ts-node scripts/test-email.ts",
+    "test:qr": "ts-node scripts/test-community-qr.ts",
     "setup:email-logo": "bash scripts/setup-email-logo.sh",
     "fix:image-keys": "ts-node scripts/fix-encoded-image-keys.ts"
   },
