feat(badges,prisma,seeds,services,payments,scripts): add new badge types, seeds, checker, migrations & misc fixes
- Add new BadgeType values (EXPLORER, GLOBAL_CITIZEN, HOST_MASTER, SERVICE_STAR, TRUSTED_MEMBER) to schema
- Add SQL migration to append new enum values
- Add programmatic and standalone seeds for new badges and npm script prisma:seed:new-badges
- Implement BadgeCheckerService to evaluate and award new badges
- Add marketplace unification data migration script (scripts/migrate-marketplace-data.sql)
- Extend payment intent validator: sanitize referenceType and allow subscription_tier, homesurf, berseguide
- Update subscription tier seed: set trialDays to 0

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prisma:seed:all": "ts-node prisma/seeds/index.ts",
     "prisma:seed:core": "ts-node prisma/seed.ts",
     "prisma:seed:badges": "ts-node prisma/seeds/core/badges.seed.ts",
+    "prisma:seed:new-badges": "ts-node prisma/seeds/new-badges-standalone.seed.ts",
     "prisma:seed:rewards": "ts-node prisma/seeds/core/rewards.seed.ts",
     "prisma:seed:users": "ts-node prisma/seeds/core/users.seed.ts",
     "prisma:seed:communities": "ts-node prisma/seeds/core/communities.seed.ts",
