--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "node dist/server.js",
     "start:prod": "cross-env NODE_ENV=production node dist/server.js",
     "start:staging": "cross-env NODE_ENV=staging node dist/server.js",
-    "railway:build": "npm run build && cd frontend && npm install && npm run build",
+    "railway:build": "npm run build",
+    "railway:build:full": "npm run build && cd frontend && npm install && npm run build",
     "railway:start": "node scripts/wait-for-db.js && npx prisma generate && npx prisma migrate deploy && npm run start:staging",
     "railway:start:migrate": "npm run prisma:migrate:prod && npm run start:prod",
     "railway:debug": "echo 'Railway Environment Debug:' && env | grep -E '(DATABASE|NODE_ENV|PORT|RAILWAY)' && node scripts/wait-for-db.js",
