feat(services,homesurf,berseguide,config): add metadata & profile enrichment, expose metadata endpoints, enrich search results
- Add MetadataService and ServiceMetadata types to provide frontend-ready enums (guide/accommodation/payment types, languages, amenities, popular cities, trust/activity levels).
- Add ProfileEnrichmentService and profile-enrichment types to assemble enriched user profiles (stats, badges, trust, mutual data).
- Wire /metadata endpoints for HomeSurf and BerseGuide (controllers + routes) returning service metadata.
- Integrate ProfileEnrichmentService into HomeSurfService and BerseGuideService to enrich search results; return enriched user objects and fallback to basic profile on failure.
- Add requestingUserId to search DTOs/types and pass user id from controllers for mutual connections enrichment.
- Add comprehensive services.types for shared response/filter interfaces.
- Make PORT optional (defaults to 3100) and API_URL optional in config schema.
- Update .env.example to document AWS SES SMTP usage and add FROM_NAME / SUPPORT_EMAIL entries (no secrets included in commit message).

--- a/.env.example
+++ b/.env.example
@@ -61,15 +61,18 @@ SPACES_CDN_ENDPOINT="https://staging-berse-app.sgp1.cdn.digitaloceanspaces.com"
 
 # Email Configuration (for notifications)
 # -----------------------------------------------------------------------------
-# Email Configuration
+# Email Configuration - AWS SES
 # -----------------------------------------------------------------------------
-# Development: Use Mailtrap, MailHog, or similar test email service
-# Production: Use Gmail, SendGrid, AWS SES, etc.
-SMTP_HOST="smtp.mailtrap.io"
-SMTP_PORT=2525
-SMTP_USER="your-mailtrap-username"
-SMTP_PASS="your-mailtrap-password"
-FROM_EMAIL="noreply@berse.app"
+# Development/Staging/Production: AWS SES (Sydney region)
+# SMTP credentials created in AWS Console → SES → SMTP Settings
+SMTP_HOST="email-smtp.ap-southeast-2.amazonaws.com"
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER="AKIATNJFDH7ANQDFJSSL"
+SMTP_PASS="BJ/XKivldc4JhXHR3vBw0SS9Y9zUVn7Q+ujNZWrBtYft"
+FROM_EMAIL="noreply@berse-app.com"
+FROM_NAME="Berse App"
+SUPPORT_EMAIL="support@berse-app.com"
 
 # Frontend URL for emails
 FRONTEND_URL="http://localhost:5173"
