feat(email): integrate SendGrid as primary provider with AWS SES fallback
- add @sendgrid/mail dependency (package.json & package-lock)
- add new SendGridService (src/services/sendgrid.service.ts) with send, bulk, verification, reset and welcome email helpers and inline HTML templates
- update EmailService to prefer SendGrid when SENDGRID_API_KEY is present, log data residency region, and fall back to existing nodemailer (AWS SES SMTP)
- only verify SMTP transporter when SendGrid is not configured
- improve logging for provider-specific send attempts/failures
- ignore sendgrid.env in .gitignore

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@aws-sdk/client-s3": "^3.913.0",
     "@aws-sdk/s3-request-presigner": "^3.913.0",
     "@prisma/client": "^6.13.0",
+    "@sendgrid/mail": "^8.1.6",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/csurf": "^1.11.5",
