feat(connections,user,settings,prisma,env,types,validators,routes): add allowMessagesViaPhone, connection direction filter, normalize connection responses & user connections endpoints
- Add allowMessagesViaPhone privacy setting (Prisma schema + migration), expose in .env.example, settings service and types, and default values.
- Introduce direction filter for connections (sent|received|all): validators, types, controller query parsing and service where-clause handling.
- Normalize connection response shape: make several fields explicit/null (message, relationship*, howWeMet, respondedAt/connectedAt/removedAt/canReconnectAt), add removedBy, include other user's bio and return friendly initiator/receiver keys.
- Update ConnectionService to update connection stats for both users when sending a request.
- Remove deprecated connection stats fields from responses (connectionQuality, trustChainDepth) and cleanup formatting.
- Add new user routes and Swagger docs: GET /v2/users/me/connections, GET /v2/users/:userId/connections (ACCEPTED only) and other /me endpoints (vouches, badges, points, subscription); wire up controllers and validation middleware.

--- a/.env.example
+++ b/.env.example
@@ -74,6 +74,10 @@ FROM_EMAIL="noreply@berse-app.com"
 FROM_NAME="Berse App"
 SUPPORT_EMAIL="support@berse-app.com"
 
+# Company Information (for email footers)
+COMPANY_NAME="Bersemuka App Venture Sdn Bhd"
+COMPANY_ADDRESS="Jln Palimbayan Indah 1, Kpg Palimbayan Indah, Sungai Penchala, 60000 Kuala Lumpur, Malaysia"
+
 # Frontend URL for emails
 FRONTEND_URL="http://localhost:5173"
 APP_URL="http://localhost:5173"
