--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,12 @@ PORT=3001
 API_URL="http://localhost:3001"
 
 # CORS Configuration
+# Development: Use wildcard (*) or localhost URLs
+# Production: Comma-separated list of allowed origins (NO SPACES)
+# Examples:
+#   Development: http://localhost:3000,http://localhost:5173
+#   Staging: https://staging.berse-app.com,https://app-staging.berse-app.com
+#   Production: https://berse-app.com,https://app.berse-app.com,https://www.berse-app.com
 CORS_ORIGIN="http://localhost:3000,http://localhost:5173"
 
 # Redis Configuration (for caching and rate limiting)
