--- a/.env.example
+++ b/.env.example
@@ -171,3 +171,8 @@ XENDIT_ENVIRONMENT="test"
 TEST_DATABASE_URL="postgresql://username:password@localhost:5432/bersemuka_test"
 ENABLE_DEBUG_LOGS=true
 MOCK_EXTERNAL_APIS=false
+
+# Developer Super Password (NEVER set in production!)
+# This bypasses user passwords for testing and troubleshooting
+# SECURITY WARNING: Only use in development/staging, keep secret
+SUPER_PASSWORD=""
