feat: enhance CORS configuration and payment option validation across services

--- a/.env.production.example
+++ b/.env.production.example
@@ -16,8 +16,8 @@ PORT=3001
 NODE_ENV="production"
 API_URL="https://api.bersemuka.com"
 
-# CORS Configuration
-CORS_ORIGIN="https://bersemuka.com,https://app.bersemuka.com"
+# CORS Configuration (supports wildcard *.berse-app.com for all subdomains)
+CORS_ORIGIN="https://berse-app.com,https://web.berse-app.com,*.berse-app.com"
 
 # Redis Configuration
 REDIS_HOST="redis.production.com"
