--- a/.env.staging.example
+++ b/.env.staging.example
@@ -16,8 +16,8 @@ PORT=3001
 NODE_ENV="staging"
 API_URL="https://api-staging.bersemuka.com"
 
-# CORS Configuration
-CORS_ORIGIN="https://staging.bersemuka.com,https://app-staging.bersemuka.com"
+# CORS Configuration (supports wildcard *.berse-app.com for all subdomains)
+CORS_ORIGIN="https://staging.berse-app.com,*.berse-app.com"
 
 # Redis Configuration
 REDIS_HOST="redis.staging.com"
