feat: update package.json for production start and seed scripts, upgrade Prisma dependencies
refactor: modify badge seeding logic to adjust points and add new badges

feat: create production seed script to initialize essential data for production environment

fix: enhance email template footer with automated message notice and support contact

chore: add empty migration file for future database changes

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "start:staging": "cross-env NODE_ENV=staging node dist/server.js",
     "railway:build": "npm run build",
     "railway:start": "node scripts/wait-for-db.js && npx prisma generate && npx prisma migrate deploy && npm run start:staging",
+    "railway:start:production": "node scripts/wait-for-db.js && npx prisma generate && npx prisma migrate deploy && npm run start:prod",
     "railway:start:migrate": "npm run prisma:migrate:prod && npm run start:prod",
     "railway:debug": "echo 'Railway Environment Debug:' && env | grep -E '(DATABASE|NODE_ENV|PORT|RAILWAY)' && node scripts/wait-for-db.js",
     "railway:seed": "ts-node prisma/seeds/index.ts",
+    "railway:seed:production": "npx ts-node prisma/seeds/production-seed.ts",
     "start:cluster": "cross-env NODE_ENV=production CLUSTER_MODE=true node dist/server.js",
     "copy-files": "copyfiles -u 1 src/**/*.json dist/",
     "prisma:generate": "prisma generate",
@@ -52,7 +54,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.913.0",
     "@aws-sdk/s3-request-presigner": "^3.913.0",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.19.0",
     "@sendgrid/mail": "^8.1.6",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
@@ -81,7 +83,7 @@
     "multer": "^2.0.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^6.9.8",
-    "prisma": "^6.13.0",
+    "prisma": "^6.19.0",
     "qrcode": "^1.5.4",
     "redis": "^5.7.0",
     "redoc-express": "^2.1.0",
