fix: replace rimraf with rm -rf for Railway build compatibility

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "dotenv -e .env.development.local -- nodemon --exec ts-node src/server.ts",
     "dev:local": "dotenv -e .env.local -- npm run dev",
     "test:username": "dotenv -e .env.local -- node test-username-validation.js",
-    "build": "rimraf dist && tsc && npm run copy-files",
-    "build:backend": "rimraf dist && tsc && npm run copy-files",
+    "build": "rm -rf dist && tsc && npm run copy-files",
+    "build:backend": "rm -rf dist && tsc && npm run copy-files",
     "build:check": "tsc --noEmit",
     "start": "node dist/server.js",
     "start:prod": "cross-env NODE_ENV=production node dist/server.js",
