--- a/package.json
+++ b/package.json
@@ -99,15 +99,11 @@
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "xendit-node": "^7.0.0",
-    "zod": "^4.0.14"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^9.9.0",
-    "@types/bcryptjs": "^2.4.6",
+    "zod": "^4.0.14",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.13",
@@ -117,19 +113,24 @@
     "@types/qrcode": "^1.5.5",
     "@types/socket.io": "^3.0.2",
     "@types/speakeasy": "^2.0.7",
-    "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/web-push": "^3.6.4",
     "copyfiles": "^2.4.1",
+    "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
     "dotenv-cli": "^10.0.0",
     "jest": "^30.0.5",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seeds/index.ts"
